# Algorithms

./: .gitignore  LICENSE  README.md
Curves/curve_fitting_lsqcurvefit/: sigmoidfittest.m
Curves/imagework/: dgaussian.m  gauss_distribution.m  gaussian.m  gaussian2D.m  gaussian______.ai  gaussian______.emf  gaussian_dgaussian.ai  gaussian_dgaussian_3sig.ai  gaussian_img.ai  gtest.m  gtest2D.m  gtest2D2.m  imgCreate.m  imgCreateSin.m  imgCreate_gaussian.m  sigmoid.m
Curves/special_plane_curves/: adjust_quiver_arrowhead_size.m  orbittest2.m
DCT/test1/: dcttest.m  dcttest2.m
EM/HW01/: HW01.pptx
Fibonacci/Eigen+Fibonacci/: laapproach.m
GMM/handlingPCD/: aa.m  cloud_cluster_1407254031.pcd  cloud_cluster_all_1407254031.pcd
GMM/simple_example1/: gmmtest.m
LagrangeMultiplier/test1/: newton2d.m  test1.m  testbasic.m
Manipuliability/doc/: CMU-16_pseudoinverse.ppt
Manipuliability/test1/: calcEllipse.m  dh_parameters.m  fourjoints.m  test1.m  test_puma.m  test_twolinks.m
Nearest_neighbor_searches/flanntest/: CMakeCache.txt  CMakeLists.txt  FlannTest.cpp
Numbers/Euclidean_algorithm/: ddgcd.m
Optimization/KLDivergence/: KL_divergence.ipynb  KL_divergence_optimization.ipynb
Optimization/LevmarAndroid/: .project  AndroidManifest.xml  readme.md
Optimization/tensorflow-linear_regression/: 01-linear_regression.py  04-minimizing_cost_gradient_update.py  05-minimizing_cost_tf_optimizer.py
Pointclouds/PCL.MAE683/: CMakeLists.txt  README.md
Pointclouds/PCL.MAE683/res/: test.pcd
Pointclouds/PCL.MAE683/res/template_alignment/: object_templates.txt  object_templates.txt.bak
Pointclouds/PCL.MAE683/src/: KinectViewer.cpp  cluster_extraction.cpp  common.h  estimating_sn.cpp  iterative_closest_point.cpp  kdtree_search.cpp  main_ground_based_people_detection.cpp  openni_grabber.cpp  openni_grabber_simple.cpp  openni_viewer2.cpp  openni_viewer_simple.cpp.bak  passthroughtest.cpp  pcd_read.cpp  pcd_write.cpp  pcproc.h  pcproc.hpp  planar_segmentation.cpp  random_sample_consensus.cpp  template_alignment.cpp  viewersetting.h  voxel_grid.cpp
Rotation/: rotation_matrix_demo.m
Rotation/Coplanarity/: COPLANAR_042314_140038.txt  COPLANAR_042314_140040.txt  COPLANAR_042314_140256.txt  COPLANAR_042314_140602.txt  COPLANAR_042314_140645.txt  COPLANAR_042314_141314.txt  COPLANAR_042314_141341.txt  COPLANAR_042314_141839.txt  COPLANAR_042314_142105.txt  COPLANAR_042314_142441.txt  COPLANAR_042314_142501.txt  COPLANAR_042314_142511.txt  COPLANAR_042314_142524.txt  COPLANAR_042314_142539.txt  COPLANAR_042314_161615.txt  COPLANAR_042314_162606.txt  COPLANAR_042314_163042.txt  COPLANAR_042314_163429.txt  COPLANAR_042314_163914.txt  COPLANAR_042314_163916.txt  coplanarity.m  (+9 more)
(+216 files in other folders)
